some modification - Elias Djedoui

--- a/cv-generator-app/root/cv-templates/cv-template.html
+++ b/cv-generator-app/root/cv-templates/cv-template.html
@@ -28,9 +28,9 @@
         <div class="section">
             <h2 class="section-title">Compétences</h2>
             <ul>
-                <li>Langages : {{codingLanguages}}</li>
+                <li>Langages : {{codingLanguages}} </li>
+                <li>{{outils}}</li>
                 <li>Frameworks : {{frameworks}}</li>
-                <li>Outils : {{outils}}</li>
                 <li>Langues : {{languages}}</li>
             </ul>
         </div>
